--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "deck.gl": "^7.2.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-map-gl": "^5.0.10",
+    "react-map-gl-geocoder": "^2.0.11",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
