--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "deck.gl": "^7.2.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-iframe": "^1.8.0",
     "react-map-gl": "^5.0.10",
     "react-map-gl-geocoder": "^2.0.11",
     "react-router-dom": "^5.0.1",
